--- a/index.html
+++ b/index.html
@@ -1,13 +1,204 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Home Page Spotify Project</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+</head>
+
+<body class="bg-dark text-white overflow-hidden">
+
+    <!-- SUDDIVISIONE COLONNE-->
+    <div class="container">
+        <div class="row">
+            <!-- SX -->
+            <div class="d-flex">
+                <div class="col-3 bg-black text-secondary d-flex flex-column vh-100 ps-4 pt-3">
+                    <p class="bi bi-three-dots"></p>
+                    <p class="bi bi-house-fill">&nbsp Home</p>
+                    <p class="bi bi-search">&nbsp Cerca</p>
+                    <p class="bi bi-music-note-list mb-4">&nbsp La tua libreria</p>
+                    <p class="bi bi-plus-square-fill">&nbsp Crea playlist</p>
+                    <p class="bi bi-heart-fill">&nbsp Brani che ti piacciono</p>
+                    <p class="bi bi-bookmark-fill">&nbsp I tuoi episodi</p>
+                    <hr>
+                    <div class="overflow-auto">
+                        <p>TEST SCRITTA NUMERO UNO</p>
+                        <p>test due</p>
+                        <p>playlist depressa etc.. etc..</p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab natus eveniet aliquid minima eum
+                        ipsa
+                        tempore, saepe facilis, nulla fuga repellendus quod. Animi doloribus, magni ipsum excepturi
+                        voluptatibus debitis ut. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione vel
+                        recusandae illo ad perferendis a quod exercitationem soluta dicta ex, delectus nam nobis
+                        distinctio
+                        laborum quasi suscipit modi vitae debitis!Lorem Lorem ipsum dolor sit amet consectetur
+                        adipisicing
+                        elit. Ducimus earum doloremque impedit iusto, vero eum inventore fugiat perspiciatis eius
+                        temporibus
+                        sit eveniet nisi, nihil ipsum illum sapiente culpa reprehenderit facilis.
+                    </div>
+                </div>
+
+                <!-- DX -->
+                <div class="col-9 bg-dark  mb-4 ms-3 p-3 vh-100 overflow-auto">
+                    <div class="bg-black d-flex align-items-start mb-3 p-3">
+                        <img src="https://via.placeholder.com/150" alt="album cover">
+                        <div class="ms-3">
+                            <p class="fw-bold">ALBUM</p>
+                            <h1>VIOLA (feat. Salmo)</h1>
+                            <p>Fedez, Salmo</p>
+                            <p>Ascolta il nuovo singolo di Fedez e Salmo</p>
+                            <button class="btn btn-success rounded-5 mx-2 px-4 text-black fw-bold">Play</button>
+                            <button class="btn btn-outline-light rounded-5 mx-2 px-4 fw-bold">Salva</button>
+                            <button class="btn rounded-5 mx-2 px-4 active"><i class="bi bi-three-dots"></i></button>
+                        </div>
+                    </div>
+
+                    <!-- PLAYLIST -->
+                    <div class="mb-4">
+                        <h2>Buonasera</h2>
+                        <div class="row row-cols-1 row-cols-md-3 g-4">
+                            <div>
+                                <div class="d-flex mb-2">
+                                    <img src="https://via.placeholder.com/50" alt="playlist cover" class="me-2">
+                                    <p class="align-self-center mb-0">Nome playlist</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex mb-2">
+                                    <img src="https://via.placeholder.com/50" alt="playlist cover" class="me-2">
+                                    <p class="align-self-center mb-0">Nome playlist</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex mb-2">
+                                    <img src="https://via.placeholder.com/50" alt="playlist cover" class="me-2">
+                                    <p class="align-self-center mb-0">Nome playlist</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex mb-2">
+                                    <img src="https://via.placeholder.com/50" alt="playlist cover" class="me-2">
+                                    <p class="align-self-center mb-0">Nome playlist</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex mb-2">
+                                    <img src="https://via.placeholder.com/50" alt="playlist cover" class="me-2">
+                                    <p class="align-self-center mb-0">Nome playlist</p>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="d-flex mb-2">
+                                    <img src="https://via.placeholder.com/50" alt="playlist cover" class="me-2">
+                                    <p class="align-self-center mb-0">Nome playlist</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Altro che può piacerti -->
+                    <div class="mb-4">
+                        <h2>Altro di ciò che ti piace</h2>
+                        <div class="row row-cols-2 row-cols-md-5 g-4">
+                            <div class="mb-3">
+                                <div class="card bg-dark text-white">
+                                    <img src="https://via.placeholder.com/150" alt="music cover"
+                                        class="card-img-top rounded-4 p-2">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Titolo Playlist</h5>
+                                        <p class="text-secondary">descrizione breve</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="card bg-dark text-white">
+                                    <img src="https://via.placeholder.com/150" alt="music cover"
+                                        class="card-img-top rounded-4 p-2">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Titolo Playlist</h5>
+                                        <p class="text-secondary">descrizione breve</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="card bg-dark text-white">
+                                    <img src="https://via.placeholder.com/150" alt="music cover"
+                                        class="card-img-top rounded-4 p-2">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Titolo Playlist</h5>
+                                        <p class="text-secondary">descrizione breve</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="card bg-dark text-white">
+                                    <img src="https://via.placeholder.com/150" alt="music cover"
+                                        class="card-img-top rounded-4 p-2">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Titolo Playlist</h5>
+                                        <p class="text-secondary">descrizione breve</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="card bg-dark text-white">
+                                    <img src="https://via.placeholder.com/150" alt="music cover"
+                                        class="card-img-top rounded-4 p-2">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Titolo Playlist</h5>
+                                        <p class="text-secondary">descrizione breve</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+
+        <div class="container fixed-bottom m-0 w-100">
+            <div class="row border-top">
+                <div class="col-12 bg-dark d-flex justify-content-between">
+
+                    <div class="sx d-flex">
+                        <img src="https://via.placeholder.com/50" alt="copertina brano">
+                        <p>Fat Funny Friend <br> Maddie Zahm</p>
+                        <i class="bi bi-heart"></i>
+                    </div>
+
+                    <div class="centro d-flex flex-column">
+                        <p> <i class="bi bi-shuffle"></i>
+                            <i class="bi bi-play-circle-fill"></i>
+                        </p>
+
+                    </div>
+
+                    <div class="dx">
+                        <i class="bi bi-mic-fill"></i>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
