--- a/album.html
+++ b/album.html
@@ -1,13 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Album Page Spotify Project</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Album Page Spotify Project</title>
+  <link rel="stylesheet" href="assets/css/album.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
+</head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body data-bs-theme="dark" class="overflow-hidden">
+
+  <div class="container-fluid p-0 m-0 bg-black">
+    <div class="row ps-3 p-0">
+      <div class="col-12 col-lg-3 fs-3 vh-100 d-flex flex-column">
+        <div>
+          <section class="mb-3">
+            <div role="button">
+              <i class="bi bi-three-dots"></i>
+            </div>
+            <div role="button" class="d-flex align-items-center">
+              <i class="bi bi-house-door"></i>
+              <span class="fs-6 ms-2"> Home</span>
+            </div>
+            <div role="button" class="d-flex align-items-center">
+              <i class="bi bi-search"></i>
+              <span class="fs-6 ms-2"> Cerca</span>
+            </div>
+            <div role="button" class="d-flex align-items-center">
+              <i class="bi bi-collection"></i>
+              <span class="fs-6 ms-2"> La mia libreria</span>
+            </div>
+          </section>
+          <section class="border-bottom">
+            <div role="button" class="d-flex align-items-center">
+              <i class="bi bi-plus-square-fill"></i>
+              <span class="fs-6 ms-2"> Crea playlist</span>
+            </div>
+            <div role="button" class="d-flex align-items-center">
+              <i class="bi bi-heart-fill"></i>
+              <span class="fs-6 ms-2"> Brani che ti piacciono</span>
+            </div>
+            <div role="button" class="d-flex align-items-center mb-3">
+              <i class="bi bi-bookmark-fill"></i>
+              <span class="fs-6 ms-2"> I tuoi episodi</span>
+            </div>
+          </section>
+        </div>
+        <div class="mt-3 fs-6 vh-100 overflow-auto">
+
+          <span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iusto voluptatum adipisci alias minima
+            quidem deserunt. Voluptatibus ut harum, illum dignissimos rerum officia, qui ullam veniam voluptatum
+            aliquid distinctio cupiditate minus! Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis, deserunt error. Dolorem aspernatur atque neque, sunt porro sed. Maxime, aut voluptate.
+            Commodi cumque, aperiam inventore facilis impedit porro nemo ipsum? Lorem ipsum dolor, sit amet
+            consectetur adipisicing elit. Distinctio voluptate nostrum dolorem, quam ut omnis odio, placeat aliquid,
+            veniam iusto eaque! Blanditiis obcaecati voluptates officia commodi. Blanditiis veritatis dicta
+            voluptatum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed corrupti, facilis veniam maxime
+            perspiciatis ratione, quasi a fugiat illo ab molestias. Quaerat ullam adipisci quis totam. Expedita
+            dolore temporibus necessitatibus?</span>
+
+        </div>
+      </div>
+
+
+
+      <div class="col-9 col-lg-9 p-0 vh-100">
+        <div class="bg-dark">
+          <h1>ciao</h1>
+          <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque et placeat sed cupiditate. Velit
+            aspernatur quasi quaerat atque provident quo, deleniti exercitationem obcaecati ipsam quos explicabo nam
+            omnis ipsum quis.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero ullam, sequi eligendi laudantium quasi aspernatur deserunt sit maiores totam laboriosam ipsam voluptate hic iusto nesciunt. Ex ea excepturi aspernatur?</span>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <footer class="bg-light ">
+    <span>idhoqwie</span>
+
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
