Identificazione sezioni da maipolare in JS

--- a/album.html
+++ b/album.html
@@ -180,7 +180,7 @@
                             <p>Album</p>
                             <div class="title-wrapper">
                                 <div class="title-content">
-                                    <h1 id="album-title">Album Title Album title Album title</h1>
+                                     <h1 id="album-title">Album Title Album title Album title</h1>  <!-- DA MANIPOLARE CON JS  LA SEZIONE HERO, UNDERHERO,-->
                                 </div>
                             </div>
                             <div class="info">
