--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
++<!doctype html>
 <html lang="en">
 
 <head>
@@ -166,34 +166,45 @@
     </div>
 
 
-    <footer>
-
-        <div class="container fixed-bottom m-0 w-100">
-            <div class="row border-top">
-                <div class="col-12 bg-dark d-flex justify-content-between">
-
-                    <div class="sx d-flex">
-                        <img src="https://via.placeholder.com/50" alt="copertina brano">
-                        <p>Fat Funny Friend <br> Maddie Zahm</p>
-                        <i class="bi bi-heart"></i>
-                    </div>
-
-                    <div class="centro d-flex flex-column">
-                        <p> <i class="bi bi-shuffle"></i>
-                            <i class="bi bi-play-circle-fill"></i>
-                        </p>
-
-                    </div>
-
-                    <div class="dx">
-                        <i class="bi bi-mic-fill"></i>
-                    </div>
-
-                </div>
+    <footer class="bg-dark d-flex align-items-center p-4">
+        <div class="container-fluid m-0">
+          <div class="row">
+            <div class="col-3 d-flex align-items-center gap-2">
+              <div class="imgPlayer me-3">
+                <img src="assets/imgs/search/image-13.jpeg" class="img-fluid">
+              </div>
+              <div class="d-flex flex-column justify-content-center me-4">
+                <span class="fw-bold">Fat Funny Friend</span>
+                <span class="fw-lighter">Matilde Zahn</span>
+              </div>
+              <div class="fs-5">
+                <i role="button" class="bi bi-heart"></i>
+              </div>
             </div>
+            <div class="col-6 d-flex justify-content-center align-items-center">
+              <div class="w-100 d-flex justify-content-center gap-4 fs-4 align-items-center">
+                <i role="button" class="bi bi-shuffle"></i>
+                <i role="button" class="bi bi-skip-backward-fill"></i>
+                <i role="button" class="bi bi-play-circle-fill fs-2"></i>
+                <i role="button" class="bi bi-skip-forward-fill"></i>
+                <i role="button" class="bi bi-repeat"></i>
+              </div>
+            </div>
+            <div class="col-3 d-flex align-items-center justify-content-end gap-2">
+              <div class="d-flex align-items-center gap-3 fs-5 me-1">
+                <i role="button" class="bi bi-mic"></i>
+                <i role="button" class="bi bi-list"></i>
+                <i role="button" class="bi bi-speaker"></i>
+                <i role="button" class="bi bi-volume-up"></i>
+              </div>
+              <div class="bg-light w-25 barWhite me-1"></div>
+              <div>
+                <i class="bi bi-arrows-angle-expand"></i>
+              </div>
+            </div>
+          </div>
         </div>
-
-    </footer>
+      </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
