--- a/artist.html
+++ b/artist.html
@@ -19,8 +19,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-    <link rel="stylesheet" href="assets/css/artist.css">
-    <link rel="stylesheet" href="assets/css/circular-font.css">
+  <link rel="stylesheet" href="assets/css/artist.css">
+  <link rel="stylesheet" href="assets/css/circular-font.css">
 </head>
 
 
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="col-9 col-lg-9 p-0 pe-2 vh-100 overflow-auto">
-          <div class="px-4 py-2 border-bottom yellow-back">
+          <div class="px-4 py-2 border-bottom" id="imageBackground">
             <div class="d-flex justify-content-between align-items-center">
               <div class="fs-4 d-flex">
                 <div class="me-3">
@@ -150,35 +150,18 @@
               </div>
             </div>
             <div class="mt-3 d-flex mb-3">
-              <div class="album-cover">
-                <img src="assets/imgs/main/image-12.jpg" class="img-fluid">
-              </div>
-              <div class="ms-3 d-flex flex-column justify-content-end">
+              <div class="d-flex flex-column justify-content-end">
                 <div>
-                  <span>ALBUM</span>
+                  <span><i class="bi bi-patch-check-fill"></i> Artista Verificato</span>
                 </div>
                 <div>
-                  <h1 class="p-0 album-title fw-bold"> Gioventù Brucata </h1>
+                  <h1 class="p-0 album-title fw-bold"> I Pinguini Tattici Nucleari </h1>
                 </div>
                 <div class="d-flex align-items-center">
-                  <div class="imageUser me-2">
-                    <img src="assets/imgs/main/image-11.jpg" class="img-fluid rounded-pill">
-                  </div>
                   <div>
                     <div class="d-flex align-items-center justofy-content-center">
                       <span class="fw-bold">
-                        Pinguini Tattici Nucleari
-                      </span>
-                      <i class="bi bi-dot fs-4"></i>
-                      <span>
-                        2017
-                      </span>
-                      <i class="bi bi-dot fs-4"></i>
-                      <span>
-                        12 Brani,
-                      </span>
-                      <span>
-                        53 min 20 sec.
+                        1.000.000 ascoltatori mensili
                       </span>
                     </div>
                   </div>
