--- a/artist.html
+++ b/artist.html
@@ -171,205 +171,196 @@
           </div>
           <div class="container-fluid p-0 m-0">
             <div class="row px-4 py-2 d-flex align-items-center justify-content-start">
-              <div class="col-3 d-flex align-items-center gap-4">
+              <div class="col-3 d-flex align-items-center gap-4 mb-3">
                 <i role="button" class="bi bi-play-circle-fill fs-1"></i>
-                <i role="button" class="bi bi-heart fs-4"></i>
-                <i role="button" class="bi bi-arrow-down-circle fs-4"></i>
+                <button type="button" class="btn btn-outline-light fw-bold">FOLLOWING</button>
                 <i role="button" class="bi bi-three-dots fs-4"></i>
               </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter border-bottom">
-                  <div class="col-6 mb-2">
-                    <span class="me-2">#</span>
-                    <span>TITOLO</span>
+              <div class="row">
+                <div class="col-7">
+
+
+
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+
+
+
+
+
                   </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>RIPRODUZIONI</span>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
                   </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <i class="bi bi-clock"></i>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row px-4 py-2">
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row px-4 py-2">
+
+                    <div class="d-flex  align-items-center fw-lighter">
+                      <div class="col-6 mb-2 d-flex align-items-center">
+                        <div class="me-3">
+                          <span>1</span>
+                        </div>
+                        <div class="d-flex flex-column">
+                          <span class="fw-bold">Montanelli - Intro</span>
+                          <span> Pinguini Tattici Nucleari</span>
+                        </div>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>694.578</span>
+                      </div>
+                      <div class="col-3 d-flex justify-content-end">
+                        <span>1:28</span>
+                      </div>
+                    </div>
                   </div>
                 </div>
+                <div class="col-5">
 
-
-
-
-
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-
-
-
-
-
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
                 </div>
               </div>
             </div>
