--- a/artist.html
+++ b/artist.html
@@ -177,7 +177,10 @@
                 <i role="button" class="bi bi-three-dots fs-4"></i>
               </div>
               <div class="row">
-                <div class="col-7">
+                <div class="col-6 me-3">
+                  <div class="mb-5">
+                    <h3>Popolari</h3>
+                  </div>
 
 
 
@@ -359,7 +362,18 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-5">
+                <div class="col-3">
+                  <div class="mb-5">
+                    <h3>Brani che ti piacciono</h3>
+                  </div>
+                  <div class="d-flex align-items-center" id="imgSm">
+                    <img src="./assets/imgs/main/image-19.jpg" alt="img a caso" class="w-25 me-2">
+                    
+                    <div>
+                      <h6> Hai messo Mi piace a ....</h6>
+                      <p>Di ....</p>
+                    </div>
+                  </div>
 
                 </div>
               </div>
