--- a/artist.html
+++ b/artist.html
@@ -216,7 +216,7 @@
                         </div>
                         <div class="d-flex flex-column">
                           <span class="fw-bold">Montanelli - Intro</span>
-                          <span> Pinguini Tattici Nucleari</span>
+                          <span id="nameArtist"></span>
                         </div>
                       </div>
                       <div class="col-3 d-flex justify-content-end">
