--- a/album.html
+++ b/album.html
@@ -39,9 +39,11 @@
                 <i class="bi bi-house-door"></i>
                 <span class="fs-6 ms-2"> Home</span>
               </div>
-              <div role="button" class="d-flex align-items-center">
-                <i class="bi bi-search"></i>
-                <span class="fs-6 ms-2"> Cerca</span>
+              <div role="button">
+                <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
+                  <i class="bi bi-search"></i>
+                  <span class="fs-6 ms-2"> Cerca</span>
+                </a>
               </div>
               <div role="button" class="d-flex align-items-center">
                 <i class="bi bi-collection"></i>
