--- a/album.html
+++ b/album.html
@@ -153,14 +153,14 @@
             </div>
             <div class="mt-3 d-flex mb-3">
               <div class="album-cover">
-                <img src="assets/imgs/main/image-12.jpg" class="img-fluid">
+                <img src="" class="img-fluid" id="album-img">
               </div>
               <div class="ms-3 d-flex flex-column justify-content-end">
                 <div>
                   <span>ALBUM</span>
                 </div>
                 <div>
-                  <h1 class="p-0 album-title fw-bold"> Gioventù Brucata </h1>
+                  <h1 class="p-0 album-title fw-bold" id="album-title"></h1>
                 </div>
                 <div class="d-flex align-items-center">
                   <div class="imageUser me-2">
@@ -168,19 +168,15 @@
                   </div>
                   <div>
                     <div class="d-flex align-items-center justofy-content-center">
-                      <span class="fw-bold">
-                        Pinguini Tattici Nucleari
+                      <span class="fw-bold" id="album-artist-name">
                       </span>
                       <i class="bi bi-dot fs-4"></i>
-                      <span>
-                        2017
+                      <span id="album-release-date">
                       </span>
                       <i class="bi bi-dot fs-4"></i>
-                      <span>
-                        12 Brani,
+                      <span id="tracks-number">
                       </span>
-                      <span>
-                        53 min 20 sec.
+                      <span id="album-duration">
                       </span>
                     </div>
                   </div>
@@ -209,187 +205,9 @@
                     <i class="bi bi-clock"></i>
                   </div>
                 </div>
-
-
-
-
-
               </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-
-
-
-
-
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
-              </div>
-              <div class="row px-4 py-2">
-                <div class="d-flex  align-items-center fw-lighter">
-                  <div class="col-6 mb-2 d-flex align-items-center">
-                    <div class="me-3">
-                      <span>1</span>
-                    </div>
-                    <div class="d-flex flex-column">
-                      <span class="fw-bold">Montanelli - Intro</span>
-                      <span> Pinguini Tattici Nucleari</span>
-                    </div>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>694.578</span>
-                  </div>
-                  <div class="col-3 d-flex justify-content-end">
-                    <span>1:28</span>
-                  </div>
-                </div>
+              <div id="songs">
+              
               </div>
             </div>
           </div>
@@ -440,7 +258,9 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous">
+  </script>
+  <script src="./assets/js/album.js"></script>
 </body>
 
 </html>
