--- a/album.html
+++ b/album.html
@@ -217,45 +217,65 @@
     </div>
   </main>
 
-  <footer class="bg-dark d-flex align-items-center p-4">
+  <!-- FOOTER -->
+  <footer class=" d-flex align-items-center p-4 border-top border-dark">
     <div class="container-fluid m-0">
-      <div class="row">
-        <div class="col-3 d-flex align-items-center gap-2">
-          <div class="imgPlayer me-3">
-            <img src="assets/imgs/search/image-13.jpeg" class="img-fluid">
-          </div>
-          <div class="d-flex flex-column justify-content-center me-4">
-            <span class="fw-bold">Fat Funny Friend</span>
-            <span class="fw-lighter">Matilde Zahn</span>
-          </div>
-          <div class="fs-5">
-            <i role="button" class="bi bi-heart"></i>
-          </div>
+
+        <div class="row">
+
+            <!-- PLAYER SX -->
+            <div class="col-3 d-flex align-items-center gap-2">
+                <div class="imgPlayer me-3">
+                    <img src="assets/imgs/search/image-13.jpeg" class="img-fluid" />
+                </div>
+                <div class="d-flex flex-column justify-content-center me-4">
+                    <span class="fw-bold">Fat Funny Friend</span>
+                    <span class="fw-lighter">Matilde Zahn</span>
+                </div>
+                <div class="fs-5">
+                    <i role="button" class="bi bi-heart"></i>
+                </div>
+            </div>
+
+            <!-- PLAYER CENTRALE -->
+            <div class="col-6 d-flex flex-column lh-1 pt-3">
+
+                <div class="buttons d-flex justify-content-center align-items-center">
+                    <div class="prev-track pe-4" onclick="prevTrack()"><i role="button"
+                            class="bi bi-skip-backward-fill"></i></div>
+                    <div class="playpause-track pe-4" onclick="playpauseTrack()"><i role="button" class="bi bi-play-circle-fill fs-2"></i></div>
+                    <div class="next-track" onclick="nextTrack()"><i role="button"
+                            class="bi bi-skip-forward-fill"></i></div>
+                </div>
+
+                <div class="slider_container d-flex">
+                    <div class="current-time pe-3">00:00</div>
+                    <input type="range" min="1" max="100" value="0" class="seek_slider mt-2" onchange="seekTo()">
+                    <div class="total-duration ps-3">00:00</div>
+                </div>
+            </div>
+
+
+            <div class="col-3 d-flex align-items-center justify-content-end gap-2">
+                <div class="d-flex align-items-center gap-3 fs-5 me-1">
+                    <i role="button" class="bi bi-mic"></i>
+                    <i role="button" class="bi bi-list"></i>
+                    <i role="button" class="bi bi-speaker"></i>
+                    <i role="button" class="bi bi-volume-up"></i>
+        
+                    <div class="slider_container">
+                        <i class="fa fa-volume-down pe-3"></i>
+                        <input type="range" min="1" max="100" value="99" class="volume_slider" onchange="setVolume()">
+                        <i class="fa fa-volume-up ps-3"></i>
+                      </div>
+
+
+                    <i class="bi bi-arrows-angle-expand"></i>
+                </div>
+            </div>
         </div>
-        <div class="col-6 d-flex justify-content-center align-items-center">
-          <div class="w-100 d-flex justify-content-center gap-4 fs-4 align-items-center">
-            <i role="button" class="bi bi-shuffle"></i>
-            <i role="button" class="bi bi-skip-backward-fill"></i>
-            <i role="button" class="bi bi-play-circle-fill fs-2"></i>
-            <i role="button" class="bi bi-skip-forward-fill"></i>
-            <i role="button" class="bi bi-repeat"></i>
-          </div>
-        </div>
-        <div class="col-3 d-flex align-items-center justify-content-end gap-2">
-          <div class="d-flex align-items-center gap-3 fs-5 me-1">
-            <i role="button" class="bi bi-mic"></i>
-            <i role="button" class="bi bi-list"></i>
-            <i role="button" class="bi bi-speaker"></i>
-            <i role="button" class="bi bi-volume-up"></i>
-          </div>
-          <div class="bg-light w-25 barWhite me-1"></div>
-          <div>
-            <i class="bi bi-arrows-angle-expand"></i>
-          </div>
-        </div>
-      </div>
     </div>
-  </footer>
+</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous">
