aggiustato cover artist

--- a/artist.html
+++ b/artist.html
@@ -184,6 +184,7 @@
                 <button class="btn rounded-5 px-2 border-0 active"><i class="bi bi-three-dots fs-4"></i></button>
               </div>
 
+              <!-- SEZIONE CHE ANDRA' A POPOLARSI DA JS -->
               <div class="row">
                 <div class="col-6 me-3">
                   <div class="mb-5">
@@ -208,7 +209,7 @@
                       <span>1:28</span>
                     </div>
                   </div>
-                </div> -->
+                  </div> -->
                   </div>
                 </div> <!-- DIV FINALE DELLA MAXI COL-6 -->
 
@@ -225,9 +226,10 @@
                   </div>
                 </div> <!-- DIV FINALE DELLA MAXI COL-3-->
               </div> <!--DIV FINALE DELLA ROW CHE RACCHIUDE LE MAXI COL-6 COL-3-->
+              
             </div> <!--DIV FINALE DELLA ROW CHE RACCHIUDE LA ROW  CHE RACCHIUDE LE MAXI COL-6 COL-3--->
           </section>
-          <!--DIV FINALE DEL CONTAINER CHE RACCHIUDE LA ROW CHE RACCHIUDE LA ROW  CHE RACCHIUDE LE MAXI COL-6 COL-3-->
+          <!--DIV FINALE DEL CONTAINER CHE RACCHIUDE LA ROW CHE RACCHIUDE LE MAXI COL-6 COL-3-->
         </main>
       </div> <!-- DIV CHE RACCHIUDE DALLA COLONNA SINISTRA AL MAIN BISOGNA CONTROLLARLA!!!-->
 
