--- a/album.html
+++ b/album.html
@@ -164,7 +164,7 @@
                 </div>
                 <div class="d-flex align-items-center">
                   <div class="imageUser me-2">
-                    <img src="assets/imgs/main/image-11.jpg" class="img-fluid rounded-pill">
+                    <img src="" class="img-fluid rounded-pill" id="artist-img">
                   </div>
                   <div>
                     <div class="d-flex align-items-center justofy-content-center">
