--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- SX -->
             <div class="d-flex">
                 <!-- PRIMA COLONNA-->
-                <nav class="col-2 bg-black text-secondary d-flex flex-column vh-100 ps-4 pt-3">
+                <nav class="col-2 bg-black d-flex flex-column vh-100 ps-4 pt-3">
                     <p class="bi bi-three-dots"></p>
                     <p class="bi bi-house-fill">&nbsp Home</p>
                     <p class="bi bi-search">&nbsp Cerca</p>
@@ -117,16 +117,17 @@
                     <!-- INTESTAZIONE PARTE CENTRALE-->
                     <div class="container-fluid m-0">
                         <div class="row d-flex justify-content-between">
-                            <div class="col-6">
-                                <button class="rounded-circle mb-4 me-3" id="button-before">
-                                    <i class="bi bi-caret-left"></i>
+                            <div class="col-6 mb-3">
+                                <button class="rounded-circle btn opacity-75 fs-6 text-white" id="button-before">
+                                    <i class="bi bi-chevron-left text-white"></i>
                                 </button>
-                                <button class="rounded-circle mb-4" id="button-after">
-                                    <i class="bi bi-caret-right"></i>
+                                <button class="rounded-circle btn opacity-75 fs-6 text-white" id="button-after">
+                                    <i class="bi bi-chevron-right text-white"></i>
                                 </button>
                             </div>
-
                             <div class="col-6 d-flex justify-content-end">
+
+                                <!-- PROFILE MENU -->
                                 <div class="dropdown">
                                     <button
                                         class="btn btn-secondary dropdown-toggle d-flex align-items-center rounded-pill ps-0 pe-2 py-0"
@@ -148,6 +149,7 @@
                                         </li>
                                     </ul>
                                 </div>
+
                             </div>
                         </div>
                     </div>
