--- a/album.html
+++ b/album.html
@@ -127,7 +127,7 @@
                       <span id="album-release-date">
                       </span>
                       <i class="bi bi-dot fs-4"></i>
-                      <span id="tracks-number">
+                      <span id="tracks-number" class="pe-1">
                       </span>
                       <span id="album-duration">
                       </span>
