uniformata la search page

--- a/album.html
+++ b/album.html
@@ -126,24 +126,21 @@
           </div>
         </div>
 
-        <div class="col-9 col-lg-9 p-0 pe-2 vh-100 overflow-auto">
+        <div class="col-10 col-lg-10 p-0 pe-2 vh-100 overflow-auto">
           <div class="px-4 py-2 border-bottom yellow-back">
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="fs-4 d-flex mb-4">
-                <div class="me-3">
-                  <button class="rounded-circle btn btn-dark opacity-50 fs-6 text-white" id="button-before">
-                    <i class="bi bi-chevron-left text-white"></i>
+            <div class="d-flex justify-content-between align-content-center my-3">
+
+              <div class="fs-4 d-flex ">
+                <button class="rounded-circle btn btn-dark opacity-50 fs-6 text-white me-3" id="button-before">
+                  <i class="bi bi-chevron-left text-white"></i>
                 </button>
-                </div>
-                <div>
-                  <button class="rounded-circle btn btn-dark opacity-50 fs-6 text-white" id="button-after">
-                    <i class="bi bi-chevron-right text-white"></i>
+                <button class="rounded-circle btn btn-dark opacity-50 fs-6 text-white" id="button-after">
+                  <i class="bi bi-chevron-right text-white"></i>
                 </button>
-                </div>
               </div>
 
               <!-- PROFILE MENU -->
-              <div class="dropdown">
+              <div class="dropdown pt-1">
                 <button class="btn btn-secondary dropdown-toggle d-flex align-items-center rounded-pill ps-0 pe-2 py-0"
                   type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   <div class="imageUser me-1">
@@ -195,7 +192,9 @@
           <div class="container-fluid p-0 m-0">
             <div class="row px-4 py-2 d-flex align-items-center justify-content-start">
               <div class="col-3 d-flex align-items-center gap-4">
-                <i role="button" class="bi bi-play-circle-fill fs-1"></i>
+                <button class="btn btn-success rounded-circle"><i
+                  class="bi bi-play-fill fs-4 text-black pt-2"></i>
+          </button>
                 <i role="button" class="bi bi-heart fs-4"></i>
                 <i role="button" class="bi bi-arrow-down-circle fs-4"></i>
                 <i role="button" class="bi bi-three-dots fs-4"></i>
