--- a/index.html
+++ b/index.html
@@ -115,17 +115,17 @@
                 <main class="col-10 gradient-bg mb-4 ms-1 p-3 vh-100 overflow-auto" id="test_02">
 
                     <!-- INTESTAZIONE PARTE CENTRALE-->
-                    <div class="container-fluid m-0">
+                    <div class="container-fluid my-3 ">
                         <div class="row d-flex justify-content-between">
                             <div class="col-6 mb-3">
-                                <button class="rounded-circle btn opacity-75 fs-6 text-white" id="button-before">
+                                <button class="rounded-circle btn opacity-75 fs-6 text-white me-3" id="button-before">
                                     <i class="bi bi-chevron-left text-white"></i>
                                 </button>
                                 <button class="rounded-circle btn opacity-75 fs-6 text-white" id="button-after">
                                     <i class="bi bi-chevron-right text-white"></i>
                                 </button>
                             </div>
-                            <div class="col-6 d-flex justify-content-end">
+                            <div class="col-6 d-flex justify-content-end pt-1">
 
                                 <!-- PROFILE MENU -->
                                 <div class="dropdown">
