--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     </div>
 
                     <!-- Altro di ciò che ti piace -->
-                    <section class="mb-5">
+                    <section class="mb-5" id="altro_che_ti_piace">
                         <div class="d-flex justify-content-between">
                             <h2>Altro di ciò che ti piace</h2>
                             <p class="text-secondary">VISUALIZZA TUTTO</p>
