Fine java stati

--- a/artist.html
+++ b/artist.html
@@ -212,7 +212,7 @@
                   </div> -->
                   </div>
                   <div class="col-12">
-                    <button id="btnOfExpand">VISUALIZZA ALTRO</button>
+                    <button id="btnOfExpand">SHOW MORE</button>
                   </div>
                 </div> <!-- DIV FINALE DELLA MAXI COL-6 -->
 
