collegamenti delle pagine

--- a/artist.html
+++ b/artist.html
@@ -32,8 +32,8 @@
         <!-- PRIMA COLONNA-->
         <nav class="col-2 bg-black text-secondary d-flex flex-column vh-100 ps-4 pt-3">
           <p class="bi bi-three-dots"></p>
-          <p class="bi bi-house-fill">&nbsp Home</p>
-          <p class="bi bi-search">&nbsp Cerca</p>
+          <a href="./index.html"><p class="bi bi-house-fill">&nbsp Home</p></a>
+          <a href="./search.html"><p class="bi bi-search">&nbsp Cerca</p></a>
           <p class="bi bi-music-note-list mb-4">&nbsp La tua libreria</p>
           <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
             &nbsp Crea playlist
