--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <!-- PRIMA COLONNA-->
                 <nav class="col-2 bg-black text-secondary d-flex flex-column vh-100 ps-4 pt-3">
                     <p class="bi bi-three-dots"></p>
-                    <p class="bi bi-house-fill">&nbsp Home</p>
-                    <p class="bi bi-search">&nbsp Cerca</p>
+                    <p class="bi bi-house-fill"><a href="#">&nbsp Home</a></p>
+                    <p class="bi bi-search"><a href="./search.html">&nbsp Cerca</a></p>
                     <p class="bi bi-music-note-list mb-4">&nbsp La tua libreria</p>
                     <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
                         <!-- Crea nuova playlist -->
