--- a/search.html
+++ b/search.html
@@ -37,11 +37,11 @@
                             </div>
                             <div role="button" class="d-flex align-items-center">
                                 <i class="bi bi-house-door"></i>
-                                <span class="fs-6 ms-2"> Home</span>
+                                <a href="./index.html"><span class="fs-6 ms-2"> Home</span></a>
                             </div>
-                            <div role="button" class="d-flex align-items-center">
+                            <div role="button" class="d-flex align-items-center ">
                                 <i class="bi bi-search"></i>
-                                <span class="fs-6 ms-2"> Cerca</span>
+                                <a href="#"><span class="fs-6 ms-2"> Cerca</span></a>
                             </div>
                             <div role="button" class="d-flex align-items-center">
                                 <i class="bi bi-collection"></i>
