--- a/album.html
+++ b/album.html
@@ -37,7 +37,7 @@
               </div>
               <div role="button" class="d-flex align-items-center">
                 <i class="bi bi-house-door"></i>
-                <span class="fs-6 ms-2"> Home</span>
+                <a href="./index.html"><span class="fs-6 ms-2"> Home</span></a>
               </div>
               <div role="button">
                 <a href="search.html" class="text-decoration-none text-light d-flex align-items-center">
