Aggiunta funzionalità ad album per cambiare colore di background dipendentemente da che colore ha la cover del album

--- a/search.html
+++ b/search.html
@@ -33,15 +33,15 @@
 
                 <nav class="col-2 bg-black d-flex flex-column vh-100 ps-4 pt-3">
                     <p class="bi bi-three-dots"></p>
-                    <p class="bi bi-house-fill">&nbsp Home</p>
-                    <p class="bi bi-search">&nbsp Cerca</p>
-                    <p class="bi bi-music-note-list mb-4">&nbsp La tua libreria</p>
+                    <p class="bi bi-house-fill">&nbspHome</p>
+                    <p class="bi bi-search">&nbspCerca</p>
+                    <p class="bi bi-music-note-list mb-4">&nbspLa tua libreria</p>
                     <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
                         <!-- Crea nuova playlist -->
-                        &nbsp Crea playlist
+                        &nbspCrea playlist
                     </p>
-                    <p class="bi bi-heart-fill">&nbsp Brani che ti piacciono</p>
-                    <p class="bi bi-bookmark-fill">&nbsp I tuoi episodi</p>
+                    <p class="bi bi-heart-fill">&nbspBrani che ti piacciono</p>
+                    <p class="bi bi-bookmark-fill">&nbspI tuoi episodi</p>
                     <hr />
                     <div class="overflow-auto">
                         <!-- SEZIONE PLAYLIST-->
@@ -118,9 +118,9 @@
                     </div>
                 </div>
 
-                <div class="col-9 ps-0 pe-2 vh-100 overflow-auto">
+                <div class="col-10 ps-0 pe-2 vh-100 overflow-auto" id="main-content">
                     <div class="px-4 py-2 mb-3">
-                        <div class="d-flex justify-content-between align-items-center">
+                        <div class="d-flex justify-content-between align-items-center mt-3">
                             <div class="fs-4 d-flex align-items-center">
                                 <div class="me-3">
                                     <i class="bi bi-arrow-left-circle"></i>
