--- a/album.html
+++ b/album.html
@@ -29,15 +29,13 @@
         <!-- PRIMA COLONNA-->
         <nav class="col-2 bg-black d-flex flex-column vh-100 ps-4 pt-3">
           <p class="bi bi-three-dots"></p>
-          <p class="bi bi-house-fill">&nbsp Home</p>
-          <p class="bi bi-search">&nbsp Cerca</p>
-          <p class="bi bi-music-note-list mb-4">&nbsp La tua libreria</p>
-          <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
-            <!-- Crea nuova playlist -->
-            &nbsp Crea playlist
+          <p class="bi bi-house-fill">&nbspHome</p>
+          <p class="bi bi-search">&nbspCerca</p>
+          <p class="bi bi-music-note-list mb-4">&nbspLa tua libreria</p>
+          <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">&nbspCrea playlist
           </p>
-          <p class="bi bi-heart-fill">&nbsp Brani che ti piacciono</p>
-          <p class="bi bi-bookmark-fill">&nbsp I tuoi episodi</p>
+          <p class="bi bi-heart-fill">&nbspBrani che ti piacciono</p>
+          <p class="bi bi-bookmark-fill">&nbspI tuoi episodi</p>
           <hr />
           <div class="overflow-auto">
             <!-- SEZIONE PLAYLIST-->
@@ -127,7 +125,7 @@
         </div>
 
         <div class="col-10 col-lg-10 p-0 pe-2 vh-100 overflow-auto">
-          <div class="px-4 py-2 border-bottom yellow-back">
+          <div class="px-4 py-2 border-bottom" id="album-info">
             <div class="d-flex justify-content-between align-content-center my-3">
 
               <div class="fs-4 d-flex ">
@@ -160,23 +158,24 @@
               </div>
 
             </div>
+
             <div class="mt-3 d-flex mb-3">
               <div class="album-cover">
                 <img src="" class="img-fluid" id="album-img" />
               </div>
-              <div class="ms-3 d-flex flex-column justify-content-end">
+              <div class="ms-4 d-flex flex-column justify-content-end">
                 <div>
                   <span>ALBUM</span>
                 </div>
                 <div>
-                  <h1 class="p-0 album-title fw-bold" id="album-title"></h1>
+                  <h1 class="p-0 album-title fw-bold " id="album-title"></h1>
                 </div>
                 <div class="d-flex align-items-center">
                   <div class="imageUser me-2">
                     <img src="" class="img-fluid rounded-pill" id="artist-img" />
                   </div>
                   <div>
-                    <div class="d-flex align-items-center justofy-content-center">
+                    <div class="d-flex align-items-center justify-content-center">
                       <span class="fw-bold" id="album-artist-name"> </span>
                       <i class="bi bi-dot fs-4"></i>
                       <span id="album-release-date"> </span>
@@ -188,13 +187,15 @@
                 </div>
               </div>
             </div>
+
           </div>
-          <div class="container-fluid p-0 m-0">
+
+          <div id="main-section" class="container-fluid p-0 m-0">
             <div class="row px-4 py-2 d-flex align-items-center justify-content-start">
               <div class="col-3 d-flex align-items-center gap-4">
-                <button class="btn btn-success rounded-circle"><i
-                  class="bi bi-play-fill fs-4 text-black pt-2"></i>
-          </button>
+                <button class="btn btn-success rounded-circle">
+                  <i class="bi bi-play-fill fs-4 text-black pt-2"></i>
+                </button>
                 <i role="button" class="bi bi-heart fs-4"></i>
                 <i role="button" class="bi bi-arrow-down-circle fs-4"></i>
                 <i role="button" class="bi bi-three-dots fs-4"></i>
@@ -216,6 +217,7 @@
               <div id="songs"></div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
@@ -284,6 +286,8 @@
     crossorigin="anonymous"></script>
   <script src="./assets/js/album.js"></script>
   <script src="assets/JS/playlist.js"></script>
+  <!-- SCRIPT PER OTTENERE IL COLORE DELL'IMMAGINE DINAMICAMENTE (LIBRERIA ESTERNA PER NODE-VIBRANT) -->
+  <script src="https://cdn.jsdelivr.net/npm/node-vibrant@3.1.6/dist/vibrant.min.js"></script>
 </body>
 
 </html>
