--- a/album.html
+++ b/album.html
@@ -227,7 +227,7 @@
       <div class="row">
         <!-- PLAYER SX -->
         <div class="col-3 d-flex align-items-center gap-2">
-          <div class="imgPlayer me-3">
+          <div id="imgPlayer" class="imgPlayer me-3">
             <img src="assets/imgs/search/image-13.jpeg" class="img-fluid" />
           </div>
           <div class="d-flex flex-column justify-content-center me-4">
