--- a/search.html
+++ b/search.html
@@ -31,13 +31,12 @@
         <div class="container-fluid p-0 m-0 bg-black">
             <div class="row ps-3 p-0">
 
-                <nav class="col-2 bg-black d-flex flex-column vh-100 ps-4 pt-3">
+                <nav class="col-2 bg-black d-flex flex-column vh-100  pt-3">
                     <p class="bi bi-three-dots"></p>
-                    <p class="bi bi-house-fill">&nbspHome</p>
-                    <p class="bi bi-search">&nbspCerca</p>
+                    <a href="./index.html" class="bi bi-house-fill link-item">&nbspHome</a>
+                    <a href="./search.html" class="bi bi-search link-item">&nbspCerca</a>
                     <p class="bi bi-music-note-list mb-4">&nbspLa tua libreria</p>
                     <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
-                        <!-- Crea nuova playlist -->
                         &nbspCrea playlist
                     </p>
                     <p class="bi bi-heart-fill">&nbspBrani che ti piacciono</p>
@@ -45,7 +44,6 @@
                     <hr />
                     <div class="overflow-auto">
                         <!-- SEZIONE PLAYLIST-->
-
                         <ul class="navbar-nav" id="playlist-index">
                             <!-- PLAYLIST AGGIUNTE DINAMICAMENTE -->
                         </ul>
