--- a/album.html
+++ b/album.html
@@ -27,24 +27,24 @@
     <div class="container-fluid p-0 m-0 bg-black">
       <div class="row ps-3 p-0">
         <!-- PRIMA COLONNA-->
-        <nav class="col-2 bg-black d-flex flex-column vh-100 ps-4 pt-3">
+        <nav class="col-2 bg-black d-flex flex-column vh-100  pt-3">
           <p class="bi bi-three-dots"></p>
-          <p class="bi bi-house-fill">&nbspHome</p>
-          <p class="bi bi-search">&nbspCerca</p>
+          <a href="./index.html" class="bi bi-house-fill link-item">&nbspHome</a>
+          <a href="./search.html" class="bi bi-search link-item">&nbspCerca</a>
           <p class="bi bi-music-note-list mb-4">&nbspLa tua libreria</p>
-          <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">&nbspCrea playlist
+          <p class="bi bi-plus-square-fill" role="button" onclick="createPlaylist()">
+              &nbspCrea playlist
           </p>
           <p class="bi bi-heart-fill">&nbspBrani che ti piacciono</p>
           <p class="bi bi-bookmark-fill">&nbspI tuoi episodi</p>
           <hr />
           <div class="overflow-auto">
-            <!-- SEZIONE PLAYLIST-->
-
-            <ul class="navbar-nav" id="playlist-index">
-              <!-- PLAYLIST AGGIUNTE DINAMICAMENTE -->
-            </ul>
+              <!-- SEZIONE PLAYLIST-->
+              <ul class="navbar-nav" id="playlist-index">
+                  <!-- PLAYLIST AGGIUNTE DINAMICAMENTE -->
+              </ul>
           </div>
-        </nav>
+      </nav>
 
         <!-- Modale per creare una nuova playlist -->
         <div class="modal fade" id="createPlaylistModal" tabindex="-1" aria-labelledby="createPlaylistModalLabel"
@@ -190,8 +190,8 @@
 
           </div>
 
-          <div id="main-section" class="container-fluid p-0 m-0">
-            <div class="row px-4 py-2 d-flex align-items-center justify-content-start">
+          <div  class="container-fluid p-0 m-0">
+            <div id="main-section"class="row px-4 py-2 d-flex align-items-center justify-content-start">
               <div class="col-3 d-flex align-items-center gap-4">
                 <button class="btn btn-success rounded-circle">
                   <i class="bi bi-play-fill fs-4 text-black pt-2"></i>
@@ -214,7 +214,9 @@
                   </div>
                 </div>
               </div>
+              <!-- GENERAZIONE BRANI  -->
               <div id="songs"></div>
+
             </div>
           </div>
 
