--- a/artist.html
+++ b/artist.html
@@ -158,13 +158,12 @@
                     alt="verified-badge" class="me-2" /><span> Artista Verificato</span>
                 </div>
                 <div>
-                  <h1 class="p-0 fw-bold display-1 mb-3" id="artistTitle"> I Pinguini Tattici Nucleari </h1>
+                  <h1 class="p-0 fw-bold display-1 mb-3" id="artistTitle"></h1>
                 </div>
                 <div class="d-flex align-items-center">
                   <div>
                     <div class="d-flex align-items-center justofy-content-center">
                       <span class="fw-bold" id="artistFan">
-                        1.000.000 ascoltatori mensili
                       </span>
                     </div>
                   </div>
