cambiate i link di js

--- a/album.html
+++ b/album.html
@@ -289,7 +289,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
   <script src="./assets/js/album.js"></script>
-  <script src="assets/JS/playlist.js"></script>
+  <script src="assets/js/playlist.js"></script>
   <!-- SCRIPT PER OTTENERE IL COLORE DELL'IMMAGINE DINAMICAMENTE (LIBRERIA ESTERNA PER NODE-VIBRANT) -->
   <script src="https://cdn.jsdelivr.net/npm/node-vibrant@3.1.6/dist/vibrant.min.js"></script>
 </body>
