--- a/search.html
+++ b/search.html
@@ -212,7 +212,7 @@
         crossorigin="anonymous"></script>
 
     <script src="assets/js/search.js"></script>
-    <script src="assets/JS/playlist.js"></script>
+    <script src="assets/js/playlist.js"></script>
 </body>
 
 </html>
