--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
                         </div>
                     </div>
 
-                    <div class="gradient-bg-ads d-flex align-items-center mb-3 p-3">
-                        <img src="https://via.placeholder.com/150" alt="album cover" />
+                    <div class="gradient-bg-ads d-flex align-items-center mb-3 p-3" id="annuncio">
+                        <img src="" alt="album cover" id="album_cover" />
                         <div class="ms-3 container-fluid">
                             <div class="d-flex justify-content-between">
                                 <p class="fw-bold">ALBUM</p>
-                                <p class="text-secondary">NASCONDI ANNUNCI</p>
+                                <p class="text-secondary" id="nascondi_annunci">NASCONDI ANNUNCI</p>
                             </div>
-                            <h1 class="display-2 fw-bold">VIOLA (feat. Salmo)</h1>
-                            <p>Fedez, Salmo</p>
-                            <p>Ascolta il nuovo singolo di Fedez e Salmo</p>
-                            <button class="btn btn-success rounded-5 mx-2 px-4 text-black fw-bold">
+                            <h1 class="display-2 fw-bold" id="nome_canzone"></h1>
+                            <p id="nome_artista"></p>
+                            <p id="ascolta_singolo">Ascolta il nuovo singolo di</p>
+                            <button class="btn btn-success rounded-5 mx-2 px-4 text-black fw-bold" id="play_button">
                                 Play
                             </button>
                             <button class="btn btn-outline-light rounded-5 mx-2 px-4 fw-bold">
@@ -552,7 +552,7 @@
                         <div class="w-100 d-flex justify-content-center gap-4 fs-4 align-items-center">
                             <i role="button" class="bi bi-shuffle"></i>
                             <i role="button" class="bi bi-skip-backward-fill"></i>
-                            <i role="button" class="bi bi-play-circle-fill fs-2"></i>
+                            <i role="button" class="bi bi-play-circle-fill fs-2" id="play_simbol"></i>
                             <i role="button" class="bi bi-skip-forward-fill"></i>
                             <i role="button" class="bi bi-repeat"></i>
                         </div>
